Разметил блок promo и настроил фон

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,8 +10,9 @@ html(lang="en")
 
         title NFTMusic
     body
-
+        //- Подключаем блок header
+        include pug/header.pug
         main
-            //- Подключаем блок header
-            include pug/header.pug
+            //- Подключаем блок promo
+            include pug/promo.pug
    
