--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -4,12 +4,20 @@ $primalFontSize: 16px;
 // Блок header
 $primalHeaderLogoFontSize: 20px;
 
+// Блок promo
+$promoHeaderMainText: 80px;
+$promoHeaderSubText: 64px;
+$promoButtonsDiscover: 18px;
+
 
 /*ЦВЕТА*/
 $primalColor: #fff;
 
 // Блок header
 $primalHeaderBGColor: rgba(255, 255, 255, 0.2);
+
+// Блок promo
+$promoButtonsBorderColor: #fff;
 
 
 
