--- a/src/pug/promo.pug
+++ b/src/pug/promo.pug
@@ -1,15 +1,17 @@
 section.promo
     .container.promo-container
         .promo__column.promo-header
-            .promo-header__item.promo-header-text
-                h1.promo-header-text__top Music for NFT creators.
-                h2.promo-header-text__bottom Digital Music for fans.  
+            .promo-header__item.header-promo
+                h1.header-promo__text-main Music for NFT creators.
+                h2.header-promo__text-sub Digital Music for fans.  
         .promo__column.promo-discription
             .promo-discription__block
-                p.promo-discription__text Music NFTs will continue to revolutionize the way that artists and fans create community together as we enter the upcoming year — undoubtedly changing the trajectory of countless budding music careers.  
+                p.promo-discription__content Music NFTs will continue to revolutionize the way that artists and fans create community together as we enter the upcoming year — undoubtedly changing the trajectory of countless budding music careers.  
         .promo__column.promo-buttons
             .promo-buttons__block
-                img.promo-buttons__solana(src="#", alt="")
-                button.promo-buttons__discover Discover More
+                a(href="#" target="_blank")
+                    img.promo-buttons__solana(src=require("../images/promo/solana-logo.png"), alt="")
+                a(href="#" target="_blank")
+                    button.promo-buttons__discover Discover More
 
 
