--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -1,6 +1,76 @@
 .promo{
     padding: 252px 0px 205px 0;
     background: url('../images/promo/bg1.png') no-repeat top left,
-                url('../images/promo/bg2.png') no-repeat top right;
-    height: 100vh;
+                url('../images/promo/bg2.png') no-repeat top right 240px;
+    height: auto;
+        &-container{
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__column{
+        }
+
+        &-header{
+            .header-promo{
+                &__text-main{
+                    font-size: $promoHeaderMainText;
+                    font-weight: 400;
+                    line-height: 97px;
+                }
+
+                &__text-sub{
+                    font-size: $promoHeaderSubText;
+                    font-weight: 400;
+                    line-height: 77px;
+                }
+
+            }
+        }
+
+        &-discription{
+            display: flex;
+            margin-top: 28px;
+            &__block{
+                flex-basis: 670px;
+            }
+            &__content{
+                @include primalFontExtraLight;
+                line-height: 160%;
+            }
+        }
+
+        &-buttons{
+            margin-top: 39px;
+            display: flex;
+                &__block{
+                    flex-basis: 350px;
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                &__discover{
+                    border: 0;
+                    background: transparent;
+                    color: $primalColor;
+                    @include primalFontLight;
+                    font-size: $promoButtonsDiscover;
+                    line-height: 160%;
+                    padding: 10px 66px 10px 32px;
+                    border: 1px solid $promoButtonsBorderColor;
+                    border-radius: 50px;
+                    cursor: pointer;
+                    position: relative;
+                        &::after{
+                            content: '';
+                            background: url('../images/promo/button-item.svg') no-repeat;
+                            width: 24px;
+                            height: 24px;
+                            position: absolute;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            left: 75%;
+                        }
+                }
+        }
 }
