Написал разметку верхней части блока discover

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,4 +16,7 @@ html(lang="en")
         main
             //- Подключаем блок promo
             include pug/promo.pug
+
+            //- Подключаем блок discover
+            include pug/discover.pug
    
