Написал разметку нижней части блока discover

--- a/src/pug/discover.pug
+++ b/src/pug/discover.pug
@@ -12,3 +12,26 @@ section.discover
                     button.genre-content__item Jazz
                     button.genre-content__item Funk
         .discover__column.discover-content
+            .discover-content__card.discover-card
+                img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
+                .discover-card__header.header-genre-card
+                    span.header-genre-card__item Heart & Sol
+                .discover-card__buttons.buttons-genre-card
+                    button.buttons-genre-card__play Play now
+                    button.buttons-genre-card__buy BUY NFT
+            .discover-content__card.discover-card
+                img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
+                .discover-card__header.header-genre-card
+                    span.header-genre-card__item Heart & Sol
+                .discover-card__buttons.buttons-genre-card
+                    button.buttons-genre-card__play Play now
+                    button.buttons-genre-card__buy BUY NFT
+            .discover-content__card.discover-card
+                img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
+                .discover-card__header.header-genre-card
+                    span.header-genre-card__item Heart & Sol
+                .discover-card__buttons.buttons-genre-card
+                    button.buttons-genre-card__play Play now
+                    button.buttons-genre-card__buy BUY NFT
+                    
+
