--- a/src/pug/discover.pug
+++ b/src/pug/discover.pug
@@ -1,16 +1,18 @@
 section.discover
-    .container.discover-conatiner
+    .container.discover-container
         .discover__column.discover-header
             .discover-header__text.discover-text
                 span.discover-text__item Discover <br> Music NFT
             .discover-header__genre.discover-genre
-                span.discover-genre__header Music Genre
-                .discover-genre__content.genre-content
-                    button.genre-content__item Rock
-                    button.genre-content__item Pop
-                    button.genre-content__item K-Pop
-                    button.genre-content__item Jazz
-                    button.genre-content__item Funk
+                .discover-genre__wrapper
+                    .discover-genre__header-wrapper
+                        span.discover-genre__header Music Genre
+                    .discover-genre__content.genre-content
+                        button.genre-content__item Rock
+                        button.genre-content__item Pop
+                        button.genre-content__item K-Pop
+                        button.genre-content__item Jazz
+                        button.genre-content__item Funk
         .discover__column.discover-content
             .discover-content__card.discover-card
                 img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
@@ -20,14 +22,14 @@ section.discover
                     button.buttons-genre-card__play Play now
                     button.buttons-genre-card__buy BUY NFT
             .discover-content__card.discover-card
-                img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
+                img.discover-card__img(src=require("../images/discover/genre 2.png"), alt="Heart & Sol")
                 .discover-card__header.header-genre-card
                     span.header-genre-card__item Heart & Sol
                 .discover-card__buttons.buttons-genre-card
                     button.buttons-genre-card__play Play now
                     button.buttons-genre-card__buy BUY NFT
             .discover-content__card.discover-card
-                img.discover-card__img(src=require("../images/discover/genre 1.png"), alt="Heart & Sol")
+                img.discover-card__img(src=require("../images/discover/genre 3.png"), alt="Heart & Sol")
                 .discover-card__header.header-genre-card
                     span.header-genre-card__item Heart & Sol
                 .discover-card__buttons.buttons-genre-card
