--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -9,6 +9,10 @@ $promoHeaderMainText: 80px;
 $promoHeaderSubText: 64px;
 $promoButtonsDiscover: 18px;
 
+// Блок discover
+$discoverHeaderMainText: 80px;
+$discoverHeaderGenreText: 20px;
+
 
 /*ЦВЕТА*/
 $primalColor: #fff;
@@ -18,6 +22,9 @@ $primalHeaderBGColor: rgba(255, 255, 255, 0.2);
 
 // Блок promo
 $promoButtonsBorderColor: #fff;
+
+// Блок discover
+$discoverButtonsBorderColor: #A3A3A3;
 
 
 
