--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -57,7 +57,21 @@
            justify-content: space-between;
            grid-gap: 10px;
             .discover-card{
+                transition: all 0.3s;
                 border: 1px solid $discoverCardBorderColor;
+            }
+
+            .discover-hide{
+                opacity: 1;
+                animation-name: discoverCardHide;
+                animation-duration: 0.5s;
+                animation-fill-mode: forwards;
+            }
+
+            @keyframes discoverCardHide{
+                to {
+                    opacity: 0;
+                }
             }
        } 
 }
