Стиллизовал карточки  музыкантов

--- a/src/pug/discover.pug
+++ b/src/pug/discover.pug
@@ -8,6 +8,7 @@ section.discover
                     .discover-genre__header-wrapper
                         span.discover-genre__header Music Genre
                     .discover-genre__content.genre-content
+                        button.genre-content__item(data-g="all") All
                         button.genre-content__item(data-g="rock") Rock
                         button.genre-content__item(data-g="pop") Pop
                         button.genre-content__item(data-g="k-pop") K-Pop
