--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -12,6 +12,9 @@ $promoButtonsDiscover: 18px;
 // Блок discover
 $discoverHeaderMainText: 80px;
 $discoverHeaderGenreText: 20px;
+$discoverHeaderGenreCardText: 24px;
+$discoverButtonsGenrePlay: 16.4px;
+$discoverButtonsGenreBuy: 20px;
 
 
 /*ЦВЕТА*/
@@ -26,6 +29,7 @@ $promoButtonsBorderColor: #fff;
 // Блок discover
 $discoverButtonsBorderColor: #A3A3A3;
 $discoverCardBorderColor: #fff;
+$discoverCardButtonsBorderColor: #fff;
 
 
 
