Написал разметку блока footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -19,4 +19,6 @@ html(lang="en")
 
             //- Подключаем блок discover
             include pug/discover.pug
-   
+        
+        //- Подключаем блок footer
+        include pug/footer.pug
