Стиллизовал блок footer

--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -2,15 +2,15 @@ footer.footer
     .container.footer-container
         .footer__column.footer-header
             .footer-header__item
-                h4.footer-header__text Shape the NFT Music
+                span.footer-header__text Shape the NFT Music
         .footer__column.footer-contacts
             .footer-contacts__social.social-footer 
-                a.social-footer(href="#") Facebook
-                a.social-footer(href="#") Twittter
-                a.social-footer(href="#") Medium
-                a.social-footer(href="#") Contact
+                a.social-footer__link(href="#") Facebook
+                a.social-footer__link(href="#") Twittter
+                a.social-footer__link(href="#") Medium
+                a.social-footer__link(href="#") Contact
             .footer-contacts__top-button.top-button-footer
-                button.top-button-footer Back to the top      
+                button.top-button-footer__btn Back to the top      
         .footer__column.footer-bottom
             .footer-bottom__docs.docs-footer
                 a.footer-docs__item(href="#") Privacy Policy  
