--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -17,6 +17,14 @@ $discoverButtonsGenrePlay: 16.4px;
 $discoverButtonsGenreBuy: 20px;
 
 
+// Блок footer
+$footerHeaderMainText: 46px;
+$footerSocialLinkText: 32px;
+$footerTopButton: 32px;
+$footerBottomDocsText: 18px;
+$footerBottomCopyrightText: 18px;
+
+
 /*ЦВЕТА*/
 $primalColor: #fff;
 
@@ -30,6 +38,10 @@ $promoButtonsBorderColor: #fff;
 $discoverButtonsBorderColor: #A3A3A3;
 $discoverCardBorderColor: #fff;
 $discoverCardButtonsBorderColor: #fff;
+
+// Блок footer
+$footerSocialBorderColor: #fff;
+$footerTopButtonTextColor: #fff;
 
 
 
