Написал скрипт для burger-menu

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,11 @@ html(lang="en")
 
         title NFTMusic
     body
+        nav.navigation
+            button.nav-btn
+                span.nav-btn__item 
+            ul.navigation__list.list-nav
+            
         //- Подключаем блок header
         include pug/header.pug
         main
