--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -43,6 +43,10 @@ $discoverCardButtonsBorderColor: #fff;
 $footerSocialBorderColor: #fff;
 $footerTopButtonTextColor: #fff;
 
+//BURGER-MENU
+$burgerMenuColor: #fff;
+$burgerMenuBGColor: gray;
+
 
 
 
