стиллизовал блок discover для средних экранов

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -45,7 +45,7 @@ $footerTopButtonTextColor: #fff;
 
 //BURGER-MENU
 $burgerMenuColor: #fff;
-$burgerMenuBGColor: gray;
+$burgerMenuBGColor: #000;
 
 
 
