--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,6 +1,7 @@
 // Основной кониейнер
 .container{
-    max-width: 1336px;
+    max-width: 1376px;
+    padding: 0 20px;
     margin: 0 auto;
 
         @media screen and (max-width: 1200px) {
