--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,8 @@ html(lang="en")
 
         title NFTMusic
     body
+
+        //- Бургер-меню
         nav.navigation
             button.nav-btn
                 span.nav-btn__item 
