--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -22,31 +22,55 @@
         &-contacts{
             display: flex;
             justify-content: space-between;
+            @media screen and (max-width: 885px){
+                flex-direction: column;
+            }
             &__social{
                 
             }
             .social-footer{
                 display: flex;
-                
+                @media screen and (max-width: 1150px){
+                    flex-direction: column;
+                }
                     &__link{
                         font-size: $footerSocialLinkText;
                         line-height: 39px;
                         padding: 0px 42px 0px 42px;
-                        
+                        @media screen and (max-width: 1150px){
+                            padding: 0px 0px 0px 0px;
+                            &:not(:first-child){
+                                margin-top: 20px;
+                            }
+                        }
                         &:not(:last-child){
                             border-right: 1px solid $footerSocialBorderColor;
+                            
+                            @media screen and (max-width: 1150px){
+                                border: 0;
+                            }
                         }
 
                         &:first-child{
                             padding: 0px 42px 0px 0px;
+                            @media screen and (max-width: 1150px){
+                                padding: 0px 0px 0px 0px;
+                            }
                         }
 
                         &:last-child{
                             padding: 0px 0px 0px 42px;
+                            @media screen and (max-width: 1150px){
+                                padding: 0px 0px 0px 0px;
+                            }
                         }
                     }
             }
             .top-button-footer{
+                @media screen and (max-width: 885px){
+                    margin-top: 20px;
+                    
+                }
                 &__btn{
                     font-size: $footerTopButton;
                     line-height: 39px;
@@ -55,6 +79,9 @@
                     color: $footerTopButtonTextColor;
                     position: relative;
                     cursor: pointer;
+                    @media screen and (max-width: 885px){
+                        color:darkmagenta;
+                    }
                         &::after{
                             content: '';
                             background: url('../images/footer/top-button-arrow.svg') no-repeat center;
@@ -64,6 +91,11 @@
                             top: 50%;
                             transform: translateY(-50%);
                             left: -15%;
+                            
+                            @media screen and (max-width: 885px){
+                                left: 105%;
+                                
+                            }
                         }
                 }
             }
