--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -3,9 +3,24 @@
     background: url('../images/promo/bg1.png') no-repeat top left,
                 url('../images/promo/bg2.png') no-repeat top right 240px;
     height: auto;
+    @media screen and (max-width: 1595px){
+        background: url('../images/promo/bg1.png') no-repeat top left,
+                    url('../images/promo/bg2.png') no-repeat top right;
+        
+    }
+
+    @media screen and (max-width: 1265px){
+        background: url('../images/promo/bg1.png') no-repeat top left;
+        
+    }
         &-container{
             display: flex;
             flex-direction: column;
+            @media screen and (max-width: 955px){
+                    
+                    
+
+            }
         }
 
         &__column{
@@ -17,6 +32,10 @@
                     font-size: $promoHeaderMainText;
                     font-weight: 400;
                     line-height: 97px;
+                }
+
+                @media screen and (max-width: 955px){
+                    
                 }
 
                 &__text-sub{
