--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -14,6 +14,9 @@
                 .discover-text{
                     &__item{
                         font-size: $discoverHeaderMainText;
+                        @media screen and (max-width: 610px){
+                            font-size: calc($discoverHeaderMainText/1.1);
+                         }
                     }
                 }
                 .discover-genre{
@@ -31,8 +34,7 @@
                             display: flex;
                             align-items: center;
                             @media screen and (max-width: 730px){
-                                margin-bottom: 20px;
-                                 
+                                margin-bottom: 20px; 
                              }
                         }
                         &__header{
@@ -43,6 +45,10 @@
                 .genre-content{
                     display: flex;
                     align-items: center;
+                    @media screen and (max-width: 510px){
+                        flex-direction: column;
+                        align-items: flex-start;
+                    }
                     &__item{
                         background: transparent;
                         color: $primalColor;
@@ -51,12 +57,28 @@
                         border-radius: 50px;
                         cursor: pointer;
                         transition: color 0.2s;
+                        @media screen and (max-width: 610px){
+                           font-size: 13px;
+                        }
+                        
                         &:not(:last-child){
                             margin-right: 16px;
+
+                            @media screen and (max-width: 610px){
+                                margin-right: 5px;
+                            }
                         }
                         &:hover{
                             color: #8f32a8;
                         }
+
+                        @media screen and (max-width: 510px){
+                            font-size: $primalFontSize;
+                            &:not(:first-child){
+                                margin-top: 15px;
+                            }
+                         }
+                        
                     }
                 }   
         }
@@ -102,6 +124,8 @@
                            max-width: 30%;
                            left: 65%;
                         }
+
+                        
 
 
                     }
@@ -157,6 +181,9 @@
                                     @media screen and (max-width: 885px){
                                         font-size: calc($discoverButtonsGenrePlay * 1.4)       
                                     }
+                                    @media screen and (max-width: 730px){
+                                        font-size: calc($discoverButtonsGenrePlay / 1.1)
+                                     }
 
                                     &::after{
                                         content: '';
@@ -193,6 +220,10 @@
 
                                     @media screen and (max-width: 885px){
                                         font-size: calc($discoverButtonsGenreBuy * 1.4)  
+                                    }
+
+                                    @media screen and (max-width: 730px){
+                                        font-size: calc($discoverButtonsGenreBuy / 1.1)  
                                     }
                             }
                     }
