Добавил скрипт плавного скролла, добавил ссылки к кнопкам и якорям

--- a/src/pug/discover.pug
+++ b/src/pug/discover.pug
@@ -1,4 +1,4 @@
-section.discover
+section.discover#marketplace
     .container.discover-container
         .discover__column.discover-header
             .discover-header__text.discover-text
