--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,20 +1,20 @@
-footer.footer
+footer.footer#resources
     .container.footer-container
         .footer__column.footer-header
             .footer-header__item
                 span.footer-header__text Shape the NFT Music
         .footer__column.footer-contacts
             .footer-contacts__social.social-footer 
-                a.social-footer__link(href="#") Facebook
-                a.social-footer__link(href="#") Twittter
-                a.social-footer__link(href="#") Medium
-                a.social-footer__link(href="#") Contact
+                a.social-footer__link(href="https://facebook.com" target="_blank") Facebook
+                a.social-footer__link(href="https://twitter.com" target="_blank") Twittter
+                a.social-footer__link(href="https://medium.com" target="_blank") Medium
+                a.social-footer__link(href="mailto: nftmusic@gmail.com" target="_blank") Contact
             .footer-contacts__top-button.top-button-footer
                 button.top-button-footer__btn Back to the top      
         .footer__column.footer-bottom
             .footer-bottom__docs.docs-footer
-                a.footer-docs__item(href="#") Privacy Policy  
-                a.footer-docs__item(href="#") Terms and Conditions 
+                a.footer-docs__item(href="https://en.wikipedia.org/wiki/Privacy_policy" target="_blank") Privacy Policy  
+                a.footer-docs__item(href="https://en.wikipedia.org/wiki/Terms_of_service" target="_blank") Terms and Conditions 
             .footer-bottom__copyright.copyright-footer
                 span.copyright-footer__text Copyright © 2022 Avi Yansah
 
