--- a/src/pug/promo.pug
+++ b/src/pug/promo.pug
@@ -9,9 +9,9 @@ section.promo
                 p.promo-discription__content Music NFTs will continue to revolutionize the way that artists and fans create community together as we enter the upcoming year — undoubtedly changing the trajectory of countless budding music careers.  
         .promo__column.promo-buttons
             .promo-buttons__block
-                a(href="#" target="_blank")
+                a(href="https://en.wikipedia.org/wiki/Solana_(blockchain_platform)" target="_blank")
                     img.promo-buttons__solana(src=require("../images/promo/solana-logo.png"), alt="")
-                a(href="#" target="_blank")
+                a(href="https://www.airnfts.com/nft/music-nft" target="_blank")
                     button.promo-buttons__discover Discover More
 
 
