--- a/src/pug/header.pug
+++ b/src/pug/header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header#about
  .container.header-container 
     .header__column.header-logo
         .header-logo__text.logo-text
@@ -9,20 +9,20 @@ header.header
         nav.header-nav__navigation.nav-header
             ul.nav-header__list.nav-list
                 li.nav-list__item
-                    a.nav-list__link(href="#" target="_blank") Marketplace  
+                    a.nav-list__link(href="#marketplace") Marketplace  
                 li.nav-list__item
-                    a.nav-list__link(href="#" target="_blank") About
+                    a.nav-list__link(href="#about") About
                 li.nav-list__item
-                    a.nav-list__link(href="#" target="_blank") Resources 
+                    a.nav-list__link(href="#resources" target="_blank") Resources 
                 li.nav-list__item
-                    a.nav-list__link(href="#" target="_blank") FAQ     
+                    a.nav-list__link(href="https://facebook.com" target="_blank") FAQ     
     .header__column.header-contacts
         .header-contacts__item.contacts-header
-           a.contacts-header__link(href="#" target="_blank") 
+           a.contacts-header__link(href="https://facebook.com" target="_blank") 
             img.contacts-header__image(src=require("../images/header/header-contacts/facebook.svg"), alt="Facebook")
-           a.contacts-header__link(href="#" target="_blank") 
+           a.contacts-header__link(href="https://twitter.com" target="_blank") 
             img.contacts-header__image(src=require("../images/header/header-contacts/twitter.svg"), alt="Twitter")
-           a.contacts-header__link(href="#" target="_blank") 
+           a.contacts-header__link(href="https://medium.com" target="_blank") 
             img.contacts-header__image(src=require("../images/header/header-contacts/mdm.svg"), alt="MDM")
             
              
